	* removed deprecated fields from add_torrent_params
	* deprecate "resume_data" field in add_torrent_params
	* improved support for bind-to-device
	* deprecated ssl_listen, SSL sockets are specified in listen_interfaces now
	* improved support for listening on multiple sockets and interfaces
	* resume data no longer has timestamps of files
	* require C++11 to build libtorrent

	* fix division by zero when setting tick_interval > 1000
	* fix move_storage() to its own directory (would delete the files)
	* fix socks5 support for UDP
	* add setting urlseed_max_request_bytes to handle large web seed requests
	* fix python build with CC/CXX environment
	* add trackers from add_torrent_params/magnet links to separate tiers
	* fix resumedata check issue with files with priority 0
	* deprecated mmap_cache feature
	* add utility function for generating peer ID fingerprint
	* fix bug in last-seen-complete
	* remove file size limit in torrent_info filename constructor
	* fix tail-padding for last file in create_torrent
	* don't send user-agent in metadata http downloads or UPnP requests when
	  in anonymous mode
	* fix internal resolve links lookup for mutable torrents
	* hint DHT bootstrap nodes of actual bootstrap request

1.1.1 release

	* update puff.c for gzip inflation
	* add dht_bootstrap_node a setting in settings_pack (and add default)
	* make pad-file and symlink support conform to BEP47
	* fix piece picker bug that could result in division by zero
	* fix value of current_tracker when all tracker failed
	* deprecate lt_trackers extension
	* remove load_asnum_db and load_country_db from python bindings
	* fix crash in session::get_ip_filter when not having set one
	* fix filename escaping when repairing torrents with broken web seeds
	* fix bug where file_completed_alert would not be posted unless file_progress
	  had been queries by the client
	* move files one-by-one when moving storage for a torrent
	* fix bug in enum_net() for BSD and Mac