@@ -41,6 +41,8 @@ namespace libtorrent
 {
 	bool bitfield::all_set() const
 	{
+		if(m_buf == nullptr) return false;
+
 		int const words = size() / 32;
 		for (int i = 1; i < words + 1; ++i)
 		{
